main section testing

--- a/index.html
+++ b/index.html
@@ -163,5 +163,21 @@
     
 </div>
 
+<section class="mt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="images/Zumba.webp" alt="zumba" class="img-fluid d-block m-auto">
+            </div>
+            <div class="col-md-6">
+                <div>
+                    <h1 class="edosz ft-85">Bajrayogini Dance And Music Academy</h1>
+                    <p class="ft-24" nunito></p>
+                    <p>We offer dance and music</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
